--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,10 @@ p {
     border: 1px solid red;
 }
 
+.input {
+    font-size: 2vmax;
+}
+
 #scoreboard {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -52,9 +56,14 @@ p {
     grid-template-rows: repeat(6, 1fr);
 }
 
-#input_score {
+#input_score_wrapper {
     grid-column-start: 2;
     grid-column-end: span 3;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+#input_score {
+    text-align: center;
 }
