--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,10 @@ img {
 
 /* Custom styles */
 
+body {
+    background-color: aliceblue;
+}
+
 /* Make paragraphs unselectable */
 p {
     -webkit-user-select: none; /* Safari */
@@ -43,18 +47,23 @@ p {
     border: none;
 }
 
-.num {
+.num,
+.left,
+.right,
+#undo,
+#input_score_wrapper,
+#togo,
+#clear,
+#enter {
     border-bottom: 1px solid black;
 }
 
-.left {
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
+.num {
+    border-left: 1px solid black;
 }
 
 .right {
     border-left: 1px solid black;
-    border-bottom: 1px solid black;
 }
 
 #scoreboard {
@@ -70,8 +79,10 @@ p {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
+    gap: 0;
+    width: 100vw;
     height: 50vh;
-    border: 1px solid black;
+    background-color: darkgray;
 }
 
 #input_score_wrapper {
@@ -80,8 +91,18 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
 }
 
 #input_score {
     text-align: center;
+}
+
+#clear {
+    border-left: 1px solid black;
+}
+
+#enter {
+    border-left: 1px solid black;
 }
