--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,36 @@ p {
 }
 
 button {
-    width: 4vmax;
-    height: 4vmax;
+    width: 100%;
+    height: 100%;
+}
+
+.row {
+    height: 20%;
+}
+
+.hotkey {
+    background-color: rgb(75, 75, 75) !important;
+    color: black !important;
+}
+
+.hockey:focus,
+.hotkey:active,
+.hotkey:hover{
+    color: white !important;
+    background-color: rgb(53, 53, 53) !important;
+}
+
+#scoreboard,
+#input {
+    height: 50vh;
+}
+
+#scoreboard {
+    background-color: rgb(20, 112, 20) !important;
+    color: white;
+}
+
+#btn-input-score {
+    pointer-events: none;
 }
