--- a/styles/style.css
+++ b/styles/style.css
@@ -77,6 +77,10 @@ button {
     color: white;
 }
 
+#scoreboard >.row {
+    height: 100%;
+}
+
 #scoreboard > .row > .col > .stats > p {
     margin-bottom: 0.5rem !important;
 }
