--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,8 @@ body {
 }
 
 /* Make paragraphs unselectable */
-p {
+p,
+button {
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
